# lms_homework

./: .env_example  .flake8  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
lms/: admin.py  filters.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_course_video_url.py  0004_subscription.py
users/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/fixtures/: payments.json
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_payment.py  0004_alter_user_managers.py  0005_payment_stripe_checkout_url_payment_stripe_price_id_and_more.py
users/services/: stripe_service.py
